--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
-    "react-markdown": "^9.0.1",
+    "@uiw/react-markdown-preview": "^5.1.3",
     "react-syntax-highlighter": "^15.5.0",
     "regexp-tree": "^0.1.27",
     "remark-gfm": "^4.0.0"
